# nimbux

./: .gitignore  CMakeLists.txt  main.cpp  skeleton.sh
config/: server.example.yaml
docs/: architecture.md
src/app/: main.cpp
